<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello_world">Hello world!</string><!-- remove -->

    <string name="app_name">Alarm</string>
    <string name="title_activity_alarm_list">Alarm List</string>
    <string name="action_settings">Settings</string>
    <string name="action_alarmList">Alarm List</string>
    <string name="action_setupNewAlarm">Setup New Alarm</string>
    <string name="action_save">Save Alarm Settings</string>
    <string name="title_activity_setup_new_alarm">Setup New Alarm</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    
  <!-- buttons -->
    <string name="button_back">Back</string>
    <string name="button_next">Next</string>
    <string name="button_finish">Finish</string>
    <string name="button_start_scan">Start scan</string>
    <string name="button_rescan">Rescan</string>
    
  <!-- alarm set up -->
  	<string name="step1_tab">Time</string>
  	<string name="step1_name_input_label">Name your alarm</string>
  	<string name="step1_name_input_default">My Alarm</string>
    <string name="step1_time_picker_label">Set your wake-up time</string>
    <string name="step1_instruction">If motion sensing is used, 
        the alarm will go off within 30 minutes of the given time. 
        If not, it will go off at the given time. </string>
        
    <string name="step2_tab">Quest</string>
    <string name="step2_heading">Scan a barcode</string>
    <string name="step2_instruction1">A quest makes it harder
        to oversleep by making sure you get out of bed. To create one, 
        scan a barcode now (any barcode will do).
        
        \n\nWhen the alarm goes off, you\'ll have to 
        scan the same barcode again to silence it. To be effective, choose an 
        item far away from your bed, ideally in another room 
        (for example, a shampoo bottle in the bathroom). 
        </string>
        
    <string name="step2_instruction2">Find an item with a barcode 
        that you keep far from your bed and scan it now. </string>
    <string name="step2_heading2">Barcode Scan</string>
    <string name="step2_scan_result">Barcode %s set</string>
    <string name="step2_scan_result_null">(No barcode currently set)</string>
    <string name="toast_audio">Please select at least one audio track first!</string>
    <string name="toast_scan">Please create a quest first!</string>
    
    <string name="step3_tab">Audio</string>
    <string name="step3_heading">Select your alarm audio</string>
    <string name="step3_instruction">(Long-click an album to select all)</string>
    <string name="title_activity_file_browse">File Browser</string>
    <string name="audio_selection_randomize">Randomize (multiple selection)</string>

</resources>
